# gst-absolutetimestamps

./: .gitignore  README.md  configure.ac
plugins/: Makefile.am  gstabsolutetimestamps.c  gstabsolutetimestamps.h
