plugin_LTLIBRARIES = libgstabsolutetimestamps.la

# sources used to compile this plug-in
libgstabsolutetimestamps_la_SOURCES = gstabsolutetimestamps.c gstabsolutetimestamps.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstabsolutetimestamps_la_CFLAGS = $(GST_CFLAGS)
libgstabsolutetimestamps_la_LIBADD = $(GST_LIBS)
libgstabsolutetimestamps_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

